fix: polish the code